--- a/.env
+++ b/.env
@@ -1,5 +1,5 @@
-MONGO_URI=mongodb+srv://phthang20it3_db_user:tucYeaY9tBpJ8mBY@semestercourses.ij3ybe7.mongodb.net/?retryWrites=true&w=majority&appName=SemesterCourses
-MONGO_DB=SemesterCourses
+MONGO_URI=mongodb+srv://conanWinner:gZcJvJrhzjhJKJaG@atlascluster.thds0wq.mongodb.net/?retryWrites=true&w=majority&appName=AtlasCluster
+MONGO_DB=AtlasCluster
 API_KEY=supersecretapikey
-MONGO_INITDB_ROOT_USERNAME=phthang20it3_db_user
-MONGO_INITDB_ROOT_PASSWORD=tucYeaY9tBpJ8mBY
+MONGO_INITDB_ROOT_USERNAME=conanWinner
+MONGO_INITDB_ROOT_PASSWORD=gZcJvJrhzjhJKJaG
